# vulnerabilities_visualized

./: README.md  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  requirements.txt  todo.yaml
commands/: git_show_date
data/: commit_logs  product_to_repo_names.json  repos.txt  vulnerabilities.csv  vulnerabilities_org_tree.json  vulnerability_count.json
data_processing/: add_vulns_to_database.js  commits_to_yaml.js  convert_vulns_csv.js  format_commit_data.js  gather_commits.sh  gun_case.js  test_data.txt  test_data.txt.json  test_data.txt.yaml  vuln_by_product.js  vuln_by_vendor.js  vuln_org_tree.js
database/: !  %1C  vulns%2FaccessEssentials%2F4%1Bcomplexity  vulns%2Facftp%2F9%1BgainedAccessLevel  vulns%2FactixCodec%2F197%1BcweId  vulns%2FactixService%2F149%1Bconfidentiality  vulns%2FadminFontEditor%1B5  vulns%2Faix%2F4%1Bconfidentiality  vulns%2Fandroid%2F137%1Bauthentication  vulns%2Fapboard%2F10%1Bscore  vulns%2Farchiver%2F160%1BcveId  vulns%2Farr%2F345%1Bcomplexity  vulns%2FashAio%2F1%1BnumberOfExploits  vulns%2Fat8024%2F33%1Bauthentication  vulns%2Fautohoster%2F174%1Bproduct  vulns%2Fbable%2F153%1BupdateDate  vulns%2FblackberryEnterpriseServer%2F48%1Bauthentication  vulns%2Fbluetooth%2F41%1Bproduct  vulns%2FbsdOs%2F23%1BnumberOfExploits  vulns%2Fcardboard%2F28%1Bauthentication  vulns%2FchatAnywhere%2F5%1BpublishDate  vulns%2Fcityhash%2F67%1Bauthentication  vulns%2Fcms4000Net%2F23%1Bscore  vulns%2Fconcread%2F169%1BcveId  vulns%2Fconnectivity%2F33%1BpublishDate  vulns%2FcontrolManager%2F82%1Bintegrity  vulns%2Fdb2%2F293%1BnumberOfExploits  (+171 more)
(+118 files in other folders)
